create dictionary in react view

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "http://IonutDragomir.github.io/Dictionary-in-react",
+  "homepage": "http://IonutDragomir/DictionaryInreactView",
   "name": "new-app",
   "version": "0.1.0",
   "private": true,
